k8s/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-webapp-deployment
  labels:
    app: go-webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-webapp
  template:
    metadata:
      labels:
        app: go-webapp
    spec:
      containers:
      - name: go-webapp
        image: go-webapp:1.14.2
        ports:
        - containerPort: 80
