k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-webapp
  labels:
    app: go-webapp
spec:
  selector:
    app.kubernetes.io/name: go-webapp
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
